# StockInsight

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FEATURE_MERGE_ANALYSIS.md  MULTI_SOURCE_DATA_GUIDE.md  Makefile  README.md  SAPAS_REQUIREMENTS.md  check_data.py  check_db.py  docker-compose.yml  init-deploy.sh  init.sh  maina.md  miana_api_doc.md  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  start_data_gateway.bat  start_data_gateway.sh  stop.bat  stop.sh  sync_all_klines.py  sync_daily_update.py  test_akshare.py  test_stock_list.py  test_sync_stock_list.py  test_sync_stock_list2.py
.claude/: settings.local.json
data_gateway/: .env.example  DATABASE.md  DEPLOY.md  Dockerfile  README.md  check_storage.py  requirements.txt  run_server.py  test_stock_list.py
data_gateway/docs/: DATA_GAP_ANALYSIS.md  README.md
data_gateway/scripts/: init.sql  init_db.py  reset_db.py  start.bat  start.sh
data_gateway/src/: config.py  database.py  main.py
docs/: 01_project_structure.md  02_database_design.md  04_implementation_roadmap.md  05_frontend_design.md
sapas/: README.md  docker-compose.yml
sapas/backend/: .env.example  Dockerfile  __init__.py  config.py  main.py  pyproject.toml
sapas/backend/api/: __init__.py  alert.py  auth.py  backtest.py  screener.py  stocks.py  watchlist.py
sapas/backend/core/: auth.py  data_gateway.py  database.py  websocket.py
sapas/backend/models/: __init__.py  alert.py  backtest.py  screener.py  user.py  watchlist.py
sapas/backend/schemas/: __init__.py  alert.py  backtest.py  common.py  screener.py  user.py  watchlist.py
sapas/backend/scripts/: db_test.py  drop_db.sql  init_db.py  init_db.sql  init_db_simple.py
sapas/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
sapas/scripts/: db-migrate.sh  deploy.sh  docker-start.bat  docker-start.sh  docker-stop.bat  docker-stop.sh  init.bat  init.sh  start.bat  start.sh  stop.sh
scripts/: 01_create_tables.sql  02_create_indexes.sql  03_create_functions.sql  04_seed_data.sql  fetch_fund_flow.py  health_check.py
src/: __init__.py  config.py  main.py
src/api/: alerts.py  auth.py  backtest.py  call_auction.py  data_sources.py  index.py  router.py  screener.py  stocks.py  sync.py  (+3 more)
tests/: test_multi_source.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+106 files in other folders)
