[project]
name = "sapas"
version = "0.1.0"
description = "Stock Analysis and Processing Automated Service - 股票数据获取与分析服务"
readme = "docs/01_project_structure.md"
requires-python = ">=3.11"
authors = [
    {name = "SAPAS Team"}
]
keywords = ["stock", "analysis", "akshare", "fastapi"]

[project.scripts]
sapas = "run:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

