[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "core", "models", "schemas", "services"]

[project]
name = "sapas"
version = "1.0.0"
description = "Stock Analysis Platform & Algo-trading System - 股票分析与自动化交易平台"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "SAPAS Team"}
]
keywords = ["stock", "analysis", "trading", "fastapi"]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",

    # 数据获取 (通过数据网关)
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # 数据分析
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # Redis
    "redis>=5.0.0",

    # 工具库
    "tenacity>=8.2.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
